--- a/HW 1/LU Decomposition/LU_decomposition.ipynb
+++ b/HW 1/LU Decomposition/LU_decomposition.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,20 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[87., 51., 42., 53., 55.],\n",
-       "       [66.,  7.,  5.,  3., 18.],\n",
-       "       [12., 40., 21., 68., 18.],\n",
-       "       [ 9., 87., 86., 51.,  5.],\n",
-       "       [ 9., 44., 79., 84., 72.]])"
+       "[[3.0, 2.0, 1.0], [2.0, 4.0, 5.0], [1.0, 3.0, 2.0]]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,12 +69,15 @@
     "# numpy.random.randint(min_val,max_val,(<num_rows>,<num_cols>))\n",
     "A = np.random.randint(1,100,(ordo,ordo)).astype(\"float\")\n",
     "#A = np.array([[1 , -2],[3,2]])\n",
+    "A = [[3. ,2. , 1.],\n",
+    "    [2.,4.,5.],\n",
+    "    [1.,3.,2.]]\n",
     "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,100 +88,37 @@
       "\n",
       "Step 1\n",
       "-----------------------\n",
-      "[cols 0] current/upper : 66.00/87.00 = 0.76\n",
-      "[rows 0 : [87. 51. 42. 53. 55.]]\n",
-      "[rows 1 : [  0.    -31.69  -26.862 -37.207 -23.724]]\n",
-      "[cols 0] current/upper : 12.00/87.00 = 0.14\n",
-      "[rows 0 : [87. 51. 42. 53. 55.]]\n",
-      "[rows 2 : [ 0.    32.966 15.207 60.69  10.414]]\n",
-      "[cols 0] current/upper : 9.00/87.00 = 0.10\n",
-      "[rows 0 : [87. 51. 42. 53. 55.]]\n",
-      "[rows 3 : [ 0.    81.724 81.655 45.517 -0.69 ]]\n",
-      "[cols 0] current/upper : 9.00/87.00 = 0.10\n",
-      "[rows 0 : [87. 51. 42. 53. 55.]]\n",
-      "[rows 4 : [ 0.    38.724 74.655 78.517 66.31 ]]\n",
+      "[cols 0] current/upper : 2.00/3.00 = 0.67\n",
+      "[rows 0 : [3. 2. 1.]]\n",
+      "[rows 1 : [0.    2.667 4.333]]\n",
+      "[cols 0] current/upper : 1.00/3.00 = 0.33\n",
+      "[rows 0 : [3. 2. 1.]]\n",
+      "[rows 2 : [0.    2.333 1.667]]\n",
       "-----------------------\n",
       "A0 : \n",
-      " [[ 87.     51.     42.     53.     55.   ]\n",
-      " [  0.    -31.69  -26.862 -37.207 -23.724]\n",
-      " [  0.     32.966  15.207  60.69   10.414]\n",
-      " [  0.     81.724  81.655  45.517  -0.69 ]\n",
-      " [  0.     38.724  74.655  78.517  66.31 ]]\n",
+      " [[3.    2.    1.   ]\n",
+      " [0.    2.667 4.333]\n",
+      " [0.    2.333 1.667]]\n",
       "L0 : \n",
-      " [[1.    0.    0.    0.    0.   ]\n",
-      " [0.759 1.    0.    0.    0.   ]\n",
-      " [0.138 0.    1.    0.    0.   ]\n",
-      " [0.103 0.    0.    1.    0.   ]\n",
-      " [0.103 0.    0.    0.    1.   ]]\n",
+      " [[1.    0.    0.   ]\n",
+      " [0.667 1.    0.   ]\n",
+      " [0.333 0.    1.   ]]\n",
       "\n",
       "\n",
       "Step 2\n",
       "-----------------------\n",
-      "[cols 1] current/upper : 32.97/-31.69 = -1.04\n",
-      "[rows 1 : [  0.    -31.69  -26.862 -37.207 -23.724]]\n",
-      "[rows 2 : [  0.      0.    -12.737  21.985 -14.266]]\n",
-      "[cols 1] current/upper : 81.72/-31.69 = -2.58\n",
-      "[rows 1 : [  0.    -31.69  -26.862 -37.207 -23.724]]\n",
-      "[rows 3 : [  0.      0.     12.381 -50.435 -61.872]]\n",
-      "[cols 1] current/upper : 38.72/-31.69 = -1.22\n",
-      "[rows 1 : [  0.    -31.69  -26.862 -37.207 -23.724]]\n",
-      "[rows 4 : [ 0.     0.    41.83  33.051 37.32 ]]\n",
+      "[cols 1] current/upper : 2.33/2.67 = 0.88\n",
+      "[rows 1 : [0.    2.667 4.333]]\n",
+      "[rows 2 : [ 0.     0.    -2.125]]\n",
       "-----------------------\n",
       "A1 : \n",
-      " [[ 87.     51.     42.     53.     55.   ]\n",
-      " [  0.    -31.69  -26.862 -37.207 -23.724]\n",
-      " [  0.      0.    -12.737  21.985 -14.266]\n",
-      " [  0.      0.     12.381 -50.435 -61.872]\n",
-      " [  0.      0.     41.83   33.051  37.32 ]]\n",
+      " [[ 3.     2.     1.   ]\n",
+      " [ 0.     2.667  4.333]\n",
+      " [ 0.     0.    -2.125]]\n",
       "L1 : \n",
-      " [[ 1.     0.     0.     0.     0.   ]\n",
-      " [ 0.759  1.     0.     0.     0.   ]\n",
-      " [ 0.138 -1.04   1.     0.     0.   ]\n",
-      " [ 0.103 -2.579  0.     1.     0.   ]\n",
-      " [ 0.103 -1.222  0.     0.     1.   ]]\n",
-      "\n",
-      "\n",
-      "Step 3\n",
-      "-----------------------\n",
-      "[cols 2] current/upper : 12.38/-12.74 = -0.97\n",
-      "[rows 2 : [  0.      0.    -12.737  21.985 -14.266]]\n",
-      "[rows 3 : [  0.      0.      0.    -29.065 -75.739]]\n",
-      "[cols 2] current/upper : 41.83/-12.74 = -3.28\n",
-      "[rows 2 : [  0.      0.    -12.737  21.985 -14.266]]\n",
-      "[rows 4 : [  0.      0.      0.    105.254  -9.531]]\n",
-      "-----------------------\n",
-      "A2 : \n",
-      " [[ 87.     51.     42.     53.     55.   ]\n",
-      " [  0.    -31.69  -26.862 -37.207 -23.724]\n",
-      " [  0.      0.    -12.737  21.985 -14.266]\n",
-      " [  0.      0.      0.    -29.065 -75.739]\n",
-      " [  0.      0.      0.    105.254  -9.531]]\n",
-      "L2 : \n",
-      " [[ 1.     0.     0.     0.     0.   ]\n",
-      " [ 0.759  1.     0.     0.     0.   ]\n",
-      " [ 0.138 -1.04   1.     0.     0.   ]\n",
-      " [ 0.103 -2.579 -0.972  1.     0.   ]\n",
-      " [ 0.103 -1.222 -3.284  0.     1.   ]]\n",
-      "\n",
-      "\n",
-      "Step 4\n",
-      "-----------------------\n",
-      "[cols 3] current/upper : 105.25/-29.06 = -3.62\n",
-      "[rows 3 : [  0.      0.      0.    -29.065 -75.739]]\n",
-      "[rows 4 : [   0.      0.      0.      0.   -283.81]]\n",
-      "-----------------------\n",
-      "A3 : \n",
-      " [[  87.      51.      42.      53.      55.   ]\n",
-      " [   0.     -31.69   -26.862  -37.207  -23.724]\n",
-      " [   0.       0.     -12.737   21.985  -14.266]\n",
-      " [   0.       0.       0.     -29.065  -75.739]\n",
-      " [   0.       0.       0.       0.    -283.81 ]]\n",
-      "L3 : \n",
-      " [[ 1.     0.     0.     0.     0.   ]\n",
-      " [ 0.759  1.     0.     0.     0.   ]\n",
-      " [ 0.138 -1.04   1.     0.     0.   ]\n",
-      " [ 0.103 -2.579 -0.972  1.     0.   ]\n",
-      " [ 0.103 -1.222 -3.284 -3.621  1.   ]]\n"
+      " [[1.    0.    0.   ]\n",
+      " [0.667 1.    0.   ]\n",
+      " [0.333 0.875 1.   ]]\n"
      ]
     }
    ],
@@ -216,18 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.     0.     0.     0.     0.   ]\n",
-      " [ 0.759  1.     0.     0.     0.   ]\n",
-      " [ 0.138 -1.04   1.     0.     0.   ]\n",
-      " [ 0.103 -2.579 -0.972  1.     0.   ]\n",
-      " [ 0.103 -1.222 -3.284 -3.621  1.   ]]\n"
+      "[[1.    0.    0.   ]\n",
+      " [0.667 1.    0.   ]\n",
+      " [0.333 0.875 1.   ]]\n"
      ]
     }
    ],
@@ -237,18 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  87.      51.      42.      53.      55.   ]\n",
-      " [   0.     -31.69   -26.862  -37.207  -23.724]\n",
-      " [   0.       0.     -12.737   21.985  -14.266]\n",
-      " [   0.       0.       0.     -29.065  -75.739]\n",
-      " [   0.       0.       0.       0.    -283.81 ]]\n"
+      "[[ 3.     2.     1.   ]\n",
+      " [ 0.     2.667  4.333]\n",
+      " [ 0.     0.    -2.125]]\n"
      ]
     }
    ],
