--- a/HW 4/QRDecomposition.ipynb
+++ b/HW 4/QRDecomposition.ipynb
@@ -5,42 +5,64 @@
    "metadata": {},
    "source": [
     "# QR Decomposition\n",
+    "*Author : Satrya Budi Pratama*\n",
     "\n",
     "How to make $\\mathbf{A}$ which is not orthogonal to orthogonal using Gram-Schmidt to get $\\mathbf{Q}$. Using that method we can also calculate the $\\mathbf{R}$ for QR Decomposition.\n",
     "\n",
-    "Given  $A = \\begin{bmatrix} 1 & 2 & 4\\\\\n",
+    "$A = QR$\n",
+    "\n",
+    "where $Q$ is $(n×n)$ orthogonal $(Q^TQ = I)$ and $R$ is $(n×n)$ upper triangular.\n",
+    "\n",
+    "For example given  $A = \\begin{bmatrix} 1 & 2 & 4\\\\\n",
     "0 & 0 & 5  \\\\\n",
     "0 & 3 & 6\\end{bmatrix}$, where $a_1 =\\begin{bmatrix} 1\\\\0\\\\0 \\end{bmatrix},a_2 =\\begin{bmatrix} 2\\\\0\\\\3 \\end{bmatrix},a_3 =\\begin{bmatrix} 4\\\\5\\\\6 \\end{bmatrix}$ our goals it to calculate $q_1 , q_2$ and $q_3$\n",
     "\n",
-    "using this formula $q_n = \\frac{w_n}{|| w_n ||}$ where $w_n = a_n - \\sum^{n-1}_{i=1} (a_n^\\intercal q_i)q_i$ and $ || w_n || = \\sqrt{w_n^\\intercal w_n}$\n",
+    "using this formula $q_n = \\frac{w_n}{|| w_n ||}$ where $w_n = a_n - \\sum^{n-1}_{i=1} (a_n^\\intercal q_i)q_i$ and $|| w_n || = \\sqrt{w_n^\\intercal w_n}$\n",
+    "\n",
     "\n",
     "The pseudocode are :\n",
-    "1. Generate A\n",
+    "\n",
+    "\n",
+    "1. Generate $A$\n",
     "2. Call QR Decomposition\n",
     "    - generate zeros matrix as Q, and R\n",
     "    - iterate over column \n",
     "        - for first iterate update first Q = current cols / euclidean of first cols and update R for its norm\n",
-    "        - and next iterate we calculate w using the formula, update Q and R.\n",
+    "        - and next iterate we do iteration as many of q then calculate w using the formula, update Q and R.\n",
     "    - return Q and R\n",
-    "3. Prove A = QR\n",
+    "3. Prove $A = QR$\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 2., 4.],\n",
+       "       [0., 0., 5.],\n",
+       "       [0., 3., 6.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "A = np.array([[1. , 2. , 4.],\n",
     "            [0., 0., 5.],\n",
-    "            [0., 3., 6.]])\n"
+    "            [0., 3., 6.]])\n",
+    "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +162,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing $A = Q*R$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +181,7 @@
        "       [0., 3., 6.]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +206,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,20 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.26884455, 0.36648502, 0.99439379, 0.53235568, 0.15048362],\n",
-       "       [0.77759916, 0.12150445, 0.76780458, 0.45620038, 0.17618098],\n",
-       "       [0.07667154, 0.21741597, 0.4410337 , 0.07054757, 0.76850947],\n",
-       "       [0.94797381, 0.30726827, 0.32185257, 0.59690843, 0.30624851],\n",
-       "       [0.38409323, 0.5933368 , 0.43116459, 0.44401658, 0.1481439 ]])"
+       "array([[0.54366257, 0.45876114, 0.08862018, 0.36770131, 0.57946619],\n",
+       "       [0.3153552 , 0.1685013 , 0.1054826 , 0.51139564, 0.26009534],\n",
+       "       [0.46142187, 0.88814777, 0.48847009, 0.27508568, 0.82076906],\n",
+       "       [0.58945593, 0.74701087, 0.95224502, 0.33371479, 0.65439308],\n",
+       "       [0.73422061, 0.22821327, 0.99034256, 0.9185952 , 0.05493094]])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -226,13 +255,13 @@
       " --- Step 1 : ---- \n",
       "\n",
       "-- Result --\n",
-      " Q: [[0.20445792 0.         0.         0.         0.        ]\n",
-      " [0.59136892 0.         0.         0.         0.        ]\n",
-      " [0.05830917 0.         0.         0.         0.        ]\n",
-      " [0.72093989 0.         0.         0.         0.        ]\n",
-      " [0.29210525 0.         0.         0.         0.        ]] \n",
+      " Q: [[0.44471971 0.         0.         0.         0.        ]\n",
+      " [0.25796272 0.         0.         0.         0.        ]\n",
+      " [0.37744625 0.         0.         0.         0.        ]\n",
+      " [0.482179   0.         0.         0.         0.        ]\n",
+      " [0.6005975  0.         0.         0.         0.        ]] \n",
       "\n",
-      " R: [[1.31491381 0.         0.         0.         0.        ]\n",
+      " R: [[1.22248364 0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
@@ -241,19 +270,19 @@
       " --- Step 2 : ---- \n",
       "\n",
       "-- inner loop --\n",
-      "w_product : 0.5543008062940877 \t w_sigma: [0.11333119 0.32779627 0.03232082 0.39961756 0.16191418] \n",
-      " w : [0.11333119 0.32779627 0.03232082 0.39961756 0.16191418] \n",
+      "w_product : 1.079972492259144 \t w_sigma: [0.48028506 0.27859264 0.40763157 0.52074005 0.64862878] \n",
+      " w : [0.48028506 0.27859264 0.40763157 0.52074005 0.64862878] \n",
       "-- outer -- \n",
-      "w : [ 0.25315382 -0.20629183  0.18509515 -0.09234929  0.43142262] , w_norm : 0.5792730470823192\n",
+      "w : [-0.02152391 -0.11009134  0.4805162   0.22627082 -0.42041551] , w_norm : 0.6866053311427806\n",
       "-- Result --\n",
-      " Q: [[ 0.20445792  0.43701986  0.          0.          0.        ]\n",
-      " [ 0.59136892 -0.35612191  0.          0.          0.        ]\n",
-      " [ 0.05830917  0.31953006  0.          0.          0.        ]\n",
-      " [ 0.72093989 -0.15942273  0.          0.          0.        ]\n",
-      " [ 0.29210525  0.74476557  0.          0.          0.        ]] \n",
+      " Q: [[ 0.44471971 -0.03134831  0.          0.          0.        ]\n",
+      " [ 0.25796272 -0.16034151  0.          0.          0.        ]\n",
+      " [ 0.37744625  0.69984338  0.          0.          0.        ]\n",
+      " [ 0.482179    0.32955004  0.          0.          0.        ]\n",
+      " [ 0.6005975  -0.61231029  0.          0.          0.        ]] \n",
       "\n",
-      " R: [[1.31491381 0.55430081 0.         0.         0.        ]\n",
-      " [0.         0.57927305 0.         0.         0.        ]\n",
+      " R: [[1.22248364 1.07997249 0.         0.         0.        ]\n",
+      " [0.         0.68660533 0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]]\n",
@@ -261,74 +290,74 @@
       " --- Step 3 : ---- \n",
       "\n",
       "-- inner loop --\n",
-      "w_product : 1.0410655586797284 \t w_sigma: [0.2128541  0.61565382 0.06070367 0.75054568 0.30410071] \n",
-      " w : [0.2128541  0.61565382 0.06070367 0.75054568 0.30410071] \n",
-      "w_product : 0.5718672489077508 \t w_sigma: [ 0.24991734 -0.20365446  0.18272878 -0.09116864  0.42590704] \n",
-      " w : [0.46277145 0.41199936 0.24343245 0.65937704 0.73000775] \n",
+      "w_product : 1.3049427371701534 \t w_sigma: [0.58033376 0.33662658 0.49254574 0.62921598 0.78374534] \n",
+      " w : [0.58033376 0.33662658 0.49254574 0.62921598 0.78374534] \n",
+      "w_product : 0.029576671118377473 \t w_sigma: [-0.00092718 -0.00474237  0.02069904  0.00974699 -0.0181101 ] \n",
+      " w : [0.57940658 0.33188421 0.51324478 0.63896297 0.76563524] \n",
       "-- outer -- \n",
-      "w : [ 0.53162234  0.35580522  0.19760125 -0.33752448 -0.29884317] , w_norm : 0.8071529847085812\n",
+      "w : [-0.4907864  -0.22640161 -0.02477469  0.31328204  0.22470732] , w_norm : 0.6643656987465439\n",
       "-- Result --\n",
-      " Q: [[ 0.20445792  0.43701986  0.65863889  0.          0.        ]\n",
-      " [ 0.59136892 -0.35612191  0.4408151   0.          0.        ]\n",
-      " [ 0.05830917  0.31953006  0.24481264  0.          0.        ]\n",
-      " [ 0.72093989 -0.15942273 -0.41816667  0.          0.        ]\n",
-      " [ 0.29210525  0.74476557 -0.37024352  0.          0.        ]] \n",
+      " Q: [[ 0.44471971 -0.03134831 -0.73872929  0.          0.        ]\n",
+      " [ 0.25796272 -0.16034151 -0.3407786   0.          0.        ]\n",
+      " [ 0.37744625  0.69984338 -0.03729075  0.          0.        ]\n",
+      " [ 0.482179    0.32955004  0.4715506   0.          0.        ]\n",
+      " [ 0.6005975  -0.61231029  0.33822836  0.          0.        ]] \n",
       "\n",
-      " R: [[1.31491381 0.55430081 1.04106556 0.         0.        ]\n",
-      " [0.         0.57927305 0.57186725 0.         0.        ]\n",
-      " [0.         0.         0.80715298 0.         0.        ]\n",
+      " R: [[1.22248364 1.07997249 1.30494274 0.         0.        ]\n",
+      " [0.         0.68660533 0.02957667 0.         0.        ]\n",
+      " [0.         0.         0.6643657  0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]\n",
       " [0.         0.         0.         0.         0.        ]]\n",
       "\n",
       " --- Step 4 : ---- \n",
       "\n",
       "-- inner loop --\n",
-      "w_product : 0.942775304838766 \t w_sigma: [0.19275788 0.55752802 0.05497245 0.67968432 0.27538962] \n",
-      " w : [0.19275788 0.55752802 0.05497245 0.67968432 0.27538962] \n",
-      "w_product : 0.3282566109917575 \t w_sigma: [ 0.14345466 -0.11689937  0.10488785 -0.05233157  0.24447422] \n",
-      " w : [0.33621254 0.44062864 0.1598603  0.62735275 0.51986384] \n",
-      "w_product : 0.15499962514163573 \t w_sigma: [ 0.10208878  0.06832617  0.03794587 -0.06481568 -0.05738761] \n",
-      " w : [0.43830132 0.50895482 0.19780617 0.56253708 0.46247623] \n",
+      "w_product : 1.1118913323071173 \t w_sigma: [0.49448    0.28682651 0.41967922 0.53613065 0.66779915] \n",
+      " w : [0.49448    0.28682651 0.41967922 0.53613065 0.66779915] \n",
+      "w_product : -0.35349743853242876 \t w_sigma: [ 0.01108155  0.05668031 -0.24739284 -0.1164951   0.21645012] \n",
+      " w : [0.50556154 0.34350683 0.17228637 0.41963555 0.88424927] \n",
+      "w_product : 0.01189579270971497 \t w_sigma: [-0.00878777 -0.00405383 -0.0004436   0.00560947  0.00402349] \n",
+      " w : [0.49677377 0.33945299 0.17184277 0.42524502 0.88827277] \n",
       "-- outer -- \n",
-      "w : [ 0.09405436 -0.05275444 -0.1272586   0.03437136 -0.01845965] , w_norm : 0.17130719061763455\n",
+      "w : [-0.12907246  0.17194265  0.10324291 -0.09153023  0.03032243] , w_norm : 0.25725532977667326\n",
       "-- Result --\n",
-      " Q: [[ 0.20445792  0.43701986  0.65863889  0.54903918  0.        ]\n",
-      " [ 0.59136892 -0.35612191  0.4408151  -0.30795229  0.        ]\n",
-      " [ 0.05830917  0.31953006  0.24481264 -0.74286782  0.        ]\n",
-      " [ 0.72093989 -0.15942273 -0.41816667  0.20064165  0.        ]\n",
-      " [ 0.29210525  0.74476557 -0.37024352 -0.10775759  0.        ]] \n",
+      " Q: [[ 0.44471971 -0.03134831 -0.73872929 -0.501729    0.        ]\n",
+      " [ 0.25796272 -0.16034151 -0.3407786   0.6683735   0.        ]\n",
+      " [ 0.37744625  0.69984338 -0.03729075  0.40132468  0.        ]\n",
+      " [ 0.482179    0.32955004  0.4715506  -0.35579526  0.        ]\n",
+      " [ 0.6005975  -0.61231029  0.33822836  0.11786902  0.        ]] \n",
       "\n",
-      " R: [[1.31491381 0.55430081 1.04106556 0.9427753  0.        ]\n",
-      " [0.         0.57927305 0.57186725 0.32825661 0.        ]\n",
-      " [0.         0.         0.80715298 0.15499963 0.        ]\n",
-      " [0.         0.         0.         0.17130719 0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]]\n",
+      " R: [[ 1.22248364  1.07997249  1.30494274  1.11189133  0.        ]\n",
+      " [ 0.          0.68660533  0.02957667 -0.35349744  0.        ]\n",
+      " [ 0.          0.          0.6643657   0.01189579  0.        ]\n",
+      " [ 0.          0.          0.          0.25725533  0.        ]\n",
+      " [ 0.          0.          0.          0.          0.        ]]\n",
       "\n",
       " --- Step 5 : ---- \n",
       "\n",
       "-- inner loop --\n",
-      "w_product : 0.4438270546940587 \t w_sigma: [0.09074396 0.26246553 0.02587919 0.31997263 0.12964421] \n",
-      " w : [0.09074396 0.26246553 0.02587919 0.31997263 0.12964421] \n",
-      "w_product : 0.3100938041074084 \t w_sigma: [ 0.13551715 -0.1104312   0.09908429 -0.049436    0.23094719] \n",
-      " w : [0.22626111 0.15203433 0.12496348 0.27053662 0.3605914 ] \n",
-      "w_product : 0.18200619265009796 \t w_sigma: [ 0.11987636  0.08023108  0.04455742 -0.07610892 -0.06738661] \n",
-      " w : [0.34613746 0.23226541 0.1695209  0.1944277  0.29320479] \n",
-      "w_product : -0.49705230598905875 \t w_sigma: [-0.27290119  0.1530684   0.36924416 -0.0997294   0.05356116] \n",
-      " w : [0.07323627 0.3853338  0.53876506 0.0946983  0.34676595] \n",
+      "w_product : 0.9831171286237157 \t w_sigma: [0.43721157 0.25360757 0.37107387 0.47403843 0.59045769] \n",
+      " w : [0.43721157 0.25360757 0.37107387 0.47403843 0.59045769] \n",
+      "w_product : 0.6965609163722112 \t w_sigma: [-0.021836   -0.11168763  0.48748355  0.22955168 -0.42651142] \n",
+      " w : [0.41537556 0.14191994 0.85855742 0.70359011 0.16394627] \n",
+      "w_product : -0.2201520141086919 \t w_sigma: [ 0.16263274  0.07502309  0.00820963 -0.10381281 -0.07446166] \n",
+      " w : [0.5780083  0.21694303 0.86676706 0.5997773  0.08948462] \n",
+      "w_product : -0.013854580932444602 \t w_sigma: [ 0.00695125 -0.00926003 -0.00556019  0.00492939 -0.00163303] \n",
+      " w : [0.58495955 0.207683   0.86120687 0.60470669 0.08785159] \n",
       "-- outer -- \n",
-      "w : [ 0.07724735 -0.20915282  0.22974441  0.21155021 -0.19862205] , w_norm : 0.4320865184173566\n",
+      "w : [-0.00549335  0.05241234 -0.04043781  0.04968639 -0.03292065] , w_norm : 0.08924658731868415\n",
       "-- Result --\n",
-      " Q: [[ 0.20445792  0.43701986  0.65863889  0.54903918  0.1787775 ]\n",
-      " [ 0.59136892 -0.35612191  0.4408151  -0.30795229 -0.48405311]\n",
-      " [ 0.05830917  0.31953006  0.24481264 -0.74286782  0.53170928]\n",
-      " [ 0.72093989 -0.15942273 -0.41816667  0.20064165  0.4896015 ]\n",
-      " [ 0.29210525  0.74476557 -0.37024352 -0.10775759 -0.45968119]] \n",
+      " Q: [[ 0.44471971 -0.03134831 -0.73872929 -0.501729   -0.06155254]\n",
+      " [ 0.25796272 -0.16034151 -0.3407786   0.6683735   0.58727561]\n",
+      " [ 0.37744625  0.69984338 -0.03729075  0.40132468 -0.45310205]\n",
+      " [ 0.482179    0.32955004  0.4715506  -0.35579526  0.55673149]\n",
+      " [ 0.6005975  -0.61231029  0.33822836  0.11786902 -0.36887291]] \n",
       "\n",
-      " R: [[ 1.31491381  0.55430081  1.04106556  0.9427753   0.44382705]\n",
-      " [ 0.          0.57927305  0.57186725  0.32825661  0.3100938 ]\n",
-      " [ 0.          0.          0.80715298  0.15499963  0.18200619]\n",
-      " [ 0.          0.          0.          0.17130719 -0.49705231]\n",
-      " [ 0.          0.          0.          0.          0.43208652]]\n"
+      " R: [[ 1.22248364  1.07997249  1.30494274  1.11189133  0.98311713]\n",
+      " [ 0.          0.68660533  0.02957667 -0.35349744  0.69656092]\n",
+      " [ 0.          0.          0.6643657   0.01189579 -0.22015201]\n",
+      " [ 0.          0.          0.          0.25725533 -0.01385458]\n",
+      " [ 0.          0.          0.          0.          0.08924659]]\n"
      ]
     }
    ],
@@ -338,20 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.26884455, 0.36648502, 0.99439379, 0.53235568, 0.15048362],\n",
-       "       [0.77759916, 0.12150445, 0.76780458, 0.45620038, 0.17618098],\n",
-       "       [0.07667154, 0.21741597, 0.4410337 , 0.07054757, 0.76850947],\n",
-       "       [0.94797381, 0.30726827, 0.32185257, 0.59690843, 0.30624851],\n",
-       "       [0.38409323, 0.5933368 , 0.43116459, 0.44401658, 0.1481439 ]])"
+       "array([[0.54366257, 0.45876114, 0.08862018, 0.36770131, 0.57946619],\n",
+       "       [0.3153552 , 0.1685013 , 0.1054826 , 0.51139564, 0.26009534],\n",
+       "       [0.46142187, 0.88814777, 0.48847009, 0.27508568, 0.82076906],\n",
+       "       [0.58945593, 0.74701087, 0.95224502, 0.33371479, 0.65439308],\n",
+       "       [0.73422061, 0.22821327, 0.99034256, 0.9185952 , 0.05493094]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,8 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -376,7 +407,7 @@
        "       [ True,  True,  True,  True,  True]])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,18 +417,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References\n",
+    "http://ee263.stanford.edu/lectures/qr.pdf\n",
+    "\n",
+    "http://people.inf.ethz.ch/gander/papers/qrneu.pdf"
+   ]
   }
  ],
  "metadata": {
